# ztl

./: Cargo.toml  README.md  askama.toml
src/: config.rs  index.rs  main.rs  zettel.rs
templates/: index.adoc  zettel.adoc
